# Financial-Fraud-Detection

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_DataCleaning.ipynb  01_Fraud_EDA.ipynb  01_Transaction_EDA.ipynb  02_DecisionTree.ipynb  02_FeatureEngineering.ipynb  02_Preprocessing.ipynb
