[project]
name = "financial-fraud-detection"
version = "0.1.0"
description = "2190-project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.43",
    "textblob>=0.19.0",
    "kaggle>=1.6.0",
    "polars>=1.34.0",
    "pycountry>=24.6.1",
    "country-converter>=1.3.2",
    "statsmodels>=0.14.5",
    "pyarrow>=22.0.0",
    "xgboost>=3.1.2",
    "pingouin>=0.5.5",
    "tabulate>=0.9.0",
    "scikit-posthocs>=0.11.4",
    "yellowbrick>=1.5",
    "imbalanced-learn>=0.12.0",
]
